# readtube

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL.md  async_fetch.py  batch.py  cache.py  chapters.py  config.py  create_epub.py  diarization.py  docker-compose.yml  errors.py  fetch_transcript.py  get_transcripts.py  get_videos.py  images.py  install.sh  integrations.py  llm.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rss.py  scheduler.py  shell.nix  tailwind.config.js  themes.py  translate.py  tts.py  web.py  web_db.py  web_worker.py  write_article.py
.github/workflows/: ci.yml  release.yml
static/: input.css  style.css
templates/: base.html  dashboard.html  reader.html  settings.html  sources.html
templates/partials/: article_card.html  article_list.html  job_status.html  source_row.html
tests/: __init__.py  conftest.py  test_e2e.py  test_new_modules.py  test_unit.py  test_web.py
